--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=22.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --test --loader ts-node/esm test/**/*.test.ts"
   },
   "keywords": [
     "nodejs",
@@ -18,7 +18,7 @@
   "author": "Igor Wnek",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^22.1.0",
+    "@types/node": "^22.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
