chore: add Prettier and ESLint

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node": ">=22.0.0"
   },
   "scripts": {
-    "test": "node --test --loader ts-node/esm test/**/*.test.ts"
+    "test": "node --test --loader ts-node/esm test/**/*.test.ts",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\""
   },
   "keywords": [
     "nodejs",
@@ -19,6 +21,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^22.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
   }
